fix(theme-base10): disable automatic dark mode; create dark-mode profile (disabled for now)

--- a/profiles/landing-page/resources/css/landing-page.css
+++ b/profiles/landing-page/resources/css/landing-page.css
@@ -302,7 +302,7 @@ header.row {
     border-radius: var(--pico-border-radius);
     background-color: linear-gradient(0deg, var(--jinks-overlay-background-color-light), var(--jinks-overlay-background-color-light));
     box-shadow: var(--pico-card-box-shadow);
-    color: var(--jinks-text-color);
+    color: var(--jinks-color-primary);
 
     p {
         text-transform: none;
