--- a/profiles/theme-base10/resources/css/jinks-components.css
+++ b/profiles/theme-base10/resources/css/jinks-components.css
@@ -96,7 +96,7 @@ h3 {
 
 :host(pb-lang) a,
 :host(pb-lang) a:link {
-    color: var(--jinks-text-color);
+    color: var(--jinks-color-primary);
 }
 
 :host(pb-lang) ul {
@@ -132,7 +132,7 @@ h3 {
 :host(pb-edit-xml) > a,
 :host(pb-download) > a {
     text-decoration: none;
-    color: var(--jinks-text-color);
+    color: var(--jinks-color-primary);
     font-size: var(--jinks-menubar-font-size);
 }
 
@@ -169,7 +169,7 @@ h3 {
     border: none;
     border-radius: var(--jinks-form-border-radius);
     height: 36px;
-    color: var(--jinks-text-color);
+    color: var(--jinks-color-primary);
     background-color: var(--jinks-form-background-color);
 
     /* Card_shadow */
