--- a/profiles/theme-base10/resources/css/jinks-variables.tpl.css
+++ b/profiles/theme-base10/resources/css/jinks-variables.tpl.css
@@ -45,7 +45,7 @@
     --jinks-menubar-font-size: [[ $theme?menubar?font-size ]];
     --jinks-menubar-button-color: rgba(165, 165, 165, 0.4);
     --jinks-toolbar-background-color: var(--jinks-colors-accent);
-    --jinks-toolbar-color: var(--jinks-text-color);
+    --jinks-toolbar-color: var(--jinks-color-primary);
 
     /* Splash */
 
@@ -80,18 +80,6 @@
     --jinks-content-max-width: 70rem;
     --jinks-page-max-width: [[ $theme?layout?max-width ]];
 
-    /* colors */
-    --jinks-text-color: var(--jinks-colors-dark);
-
-    /* text color for the light mode (usually dark) */
-    --jinks-text-color-light: var(--jinks-text-color);
-
-    /* medium color, supposedly working on both light and dark backgrounds */
-    --jinks-text-color-medium: var(--jinks-colors-medium);
-
-    /* text color for the dark mode (therefore quite light) */
-    --jinks-text-color-dark: var(--jinks-colors-medium);
-
     /* Background colors */
     --jinks-background-color: var(--jinks-colors-200);
     --jinks-background-color-light: var(--jinks-colors-200);
@@ -113,14 +101,20 @@
 
     /* --pb-drawer-background-color: var(--jinks-color-inverse); */
 
-    --jinks-color-primary: var(--jinks-text-color);
+    /* text colors */
+    --jinks-color-primary: var(--jinks-colors-700);
     --jinks-color-lighter: var(--jinks-colors-medium);
     --jinks-color-focus: var(--jinks-colors-accent);
     --jinks-color-border: #EBEBEB;
     --jinks-color-white: #FFFFFF;
+    --jinks-footnote-color: var(--jinks-color-primary);
 
-    /* text colors */
-    --jinks-footnote-color: var(--jinks-text-color);
+    --jinks-h1-color: var(--jinks-colors-600);
+    --jinks-h2-color: var(--jinks-colors-600);
+    --jinks-h3-color: var(--jinks-colors-600);
+    --jinks-h4-color: var(--jinks-colors-600);
+    --jinks-h5-color: var(--jinks-colors-600);
+    --jinks-h6-color: var(--jinks-colors-600);
 
     /* form controls */
     --jinks-form-background-color: #EFEEE9;
@@ -130,7 +124,7 @@
     --jinks-form-hover-color: var(--jinks-colors-400);
     --jinks-form-focus-color1: #3B82F6;
     --jinks-form-focus-color2: rgba(59, 130, 246, 0.20);
-    --jinks-form-text-color: var(--jinks-text-color);
+    --jinks-form-text-color: var(--jinks-color-primary);
     --jinks-form-control-font-size: 0.875rem;
 
     /* dropdown component */
